<resources>
    <string name="app_name">RtTest</string>
    <string name="menu_userList">пользователи</string>
    <string name="menu_about">о программе</string>


    <string name="cache_err_loading_in_progress">Подождите окончания загрузки</string>
    <string name="cache_err_cant_clear">Ошибка при очистке кеша</string>
    <string name="cache_err_cant_reuest">Ошибка при получении данных. Попробуйте позже.</string>
    <string name="cache_err_cant_handle_request">Ошибка при получении данных (2). Попробуйте позже.</string>

    <string name="about_text">Тестовое задание для Rentateam</string>

    <string name="card_email_text">Email:  {0}</string>
    <string name="card_db_error">Ошибка при получении информауии о пользователе</string>

    <string name="menu_item_settings">settings</string>

    <string name="settings_invalidate_db_cache_title">Инвалидировать кеш базы</string>
    <string name="settings_invalidate_db_cache_summary">Данные в баез кеша помечаются как устаревшие и при следующем запросе будут обновлены</string>
    <string name="settings_clear_db_cache_title">Очистить кеш базы</string>
    <string name="settings_clear_db_cache_summary">Инвалидирует и мгновенно очищает кеш базы</string>
    <string name="settings_clear_glide_cache_title">Очистить кеш Glide</string>
    <string name="settings_clear_glide_cache_summary">Очищает кеш Glide на диске и в памяти</string>
    <string name="msg_settings_apply_success">Успешно</string>
    <string name="msg_settings_apply_error">Что-то пошло не так</string>
    <string name="settings_screen_title">Настройки</string>
</resources>